# redun-sample

./: .gitignore  README.md  pyproject.toml
conf/: example.json
src/redun_sample/: tasks.py  workflows.py
